Target Java 17 across all modules; drop virtual-thread local runtime
Lowers the whole project to Java 17 and removes the only Java 21 dependency
(virtual threads).

- Parent POM java.release 21 → 17
- Replace Executors.newVirtualThreadPerTaskExecutor() with an elastic pool of
  daemon platform threads via a new PrOOPtExecutors helper (cloud I/O = cached
  daemon pool, LOCAL = bounded pool); updated PrOOPtRuntime, PrOOPt.builder,
  Spring auto-config, and DagExecutorTest
- Remove the virtual-thread prooopt-runtime-local module entirely;
  prooopt-runtime-local-java17 is now the sole local ONNX runtime
- Update parent modules + dependencyManagement, README module table, and the
  NoRuntimeModelRouter guidance message to point at prooopt-runtime-local-java17

Verified: full reactor builds and all tests pass; core bytecode is major
version 61 (Java 17); no virtual-thread references remain.

https://claude.ai/code/session_019xfrfxYPn3MbjMFR4xqLS9